changed background colour
colour change

--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@ background-color:peachpuff;
 }
 
 .flex-container > div {
-  background-color: blueviolet;
+  background-color: indianred;
   width: 250px;
   margin: 10px;
   text-align: center;
