--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:rgb(188, 173, 241);">
-<head>
+<body style="background-color:lightgray;">
+<head> <link rel="stylesheet" href="mystylesheet.css"/>
 <meta charset="utf-8">
 <link rel="stylesheet" href="layout_stylesheet.css"/>
 <title>Taheena's Tasty Treats</title>
@@ -13,13 +13,13 @@
 <body>
 <h1 style="color:white;text-align: center;font-family:Arial, Helvetica, sans-serif">Taheena's Tasty Treats</h1>
 <i>
-<h2 style="color:bisque;text-align:center;">Here are some of the Recipes I love </h2></i>
+<h2 style="color: darkblue;text-align:center;">Here are some of the Recipes I love </h2></i>
 <P>
 
   <div class="flex-container">
     
   <div class="flex-item">
-<a href="https://fauziaskitchenfun.com/recipe/rice-meals/tandoori-tikka-chicken-biryani/"> <img src=Biriyani.jpeg style="width: 300px; height: 410px"/></a><p class="greentext"> Chicken Tikka Biryani</p> </div>
+<a href="https://fauziaskitchenfun.com/recipe/rice-meals/tandoori-tikka-chicken-biryani/"> <img loading="lazy" class="zoom" src=Biriyani.jpeg style="width: 300px; height: 410px"/></a><p class="greentext"> Chicken Tikka Biryani</p> </div>
 <div class="flex-item">
 <a href="https://thehappyfoodie.co.uk/recipes/bengali-korma/"><img src=chickenkorma.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Bangladeshi Style Chicken Kurma</p></div>
 <div class="flex-item">
@@ -38,7 +38,7 @@
 
 
 </div>
-<button></button>
+
 
 </body>
 </html>
