--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1 style="color:white;text-align: center;font-family:Arial, Helvetica, sans-serif">Taheena's Tasty Treats</h1>
+<h1 style="color: darkblue;text-align: center;font-family:Arial, Helvetica, sans-serif">Taheena's Tasty Treats</h1>
 <i>
 <h2 style="color: darkblue;text-align:center;">Here are some of the Recipes I love </h2></i>
 <P>
@@ -19,11 +19,13 @@
   <div class="flex-container">
     
   <div class="flex-item">
-<a href="https://fauziaskitchenfun.com/recipe/rice-meals/tandoori-tikka-chicken-biryani/"> <img loading="lazy" class="zoom" src=Biriyani.jpeg style="width: 300px; height: 410px"/></a><p class="greentext"> Chicken Tikka Biryani</p> </div>
+<a href="https://fauziaskitchenfun.com/recipe/rice-meals/tandoori-tikka-chicken-biryani/"> <img src=Biriyani.jpeg style="width: 300px; height: 410px"/></a><p class="greentext"> Chicken Tikka Biryani</p> </div>
 <div class="flex-item">
 <a href="https://thehappyfoodie.co.uk/recipes/bengali-korma/"><img src=chickenkorma.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Bangladeshi Style Chicken Kurma</p></div>
 <div class="flex-item">
 <a href="https://salmasrecipes.com/recipe/handesh"><img src=Handesh.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Guror Handesh </p></div>
+<div class="flex-item">
+  <a href="https://www.youtube.com/watch?v=49pdoxcUSdE"><img src=cinihandesh.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Cini Handesh </p></div>
 
 
 </div>
@@ -35,7 +37,8 @@
 <a href="http://www.mybigfathalalblog.com/vanilla-milk-cake-recipe/"><img src=Milkcake.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Milk Cake</p></div>
 <div class="flex-item">
 <a href="https://hintofhelen.com/nandos-spicy-portugese-rice-recipe/"><img src=Spiceyrice.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Nandos Style Spicey Rice </p></div>
-
+<div class="flex-item">
+  <a href="https://afeliaskitchen.com/creamy-chicken-mushroom-pie/"><img src=Chickenpie.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Chicken and Mushroom Pie </p></div>
 
 </div>
 
