--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,32 @@
 
 </div>
 
+<p class="greentext">Choose your favorite Recipe:</p>
+
+<form action="/formSuccess.html">
+  <p id="second-paragraph"> 
+  <input type="radio" id="Chicken tandoori-tikka-chicken-biryani" name="fav_language" value="HTML">
+  <label for="html"> Chicken Tikka Biryani</label><br>
+  <input type="radio" id="chickenkorma" name="fav_language" value="CSS">
+  <label for="css">Bangladeshi Style Chicken Kurma</label><br>
+  <input type="radio" id="Guror" name="fav_language" value="JavaScript">
+  <label for="javascript">Guror Handesh</label><br>
+  <input type="radio" id="cinihandesh" name="fav_language" value="HTML">
+  <label for="html">Cini Handesh</label><br>
+  <input type="radio" id="Doy" name="fav_language" value="CSS">
+  <label for="css">Mishti Doy</label><br>
+  <input type="radio" id="Milkcake" name="fav_language" value="JavaScript">
+  <label for="javascript">Milk Cake</label><br>
+  <input type="radio" id="Nandos" name="fav_language" value="CSS">
+  <label for="css">Nandos Style Spicey Rice</label><br>
+  <input type="radio" id="creamy-chicken-mushroom-pie" name="fav_language" value="JavaScript">
+  <label for="javascript">Chicken and Mushroom Pie</label><br>
+<p>
+</p>
+<input type="submit"></p>
+</form> 
+
+<p id="second-paragraph"> </p>
 
 </body>
 </html>
