--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
 
 <p class="greentext">Choose your favorite Recipe:</p>
 
-<form action="/formSuccess.html">
+<!-- <form action="/formSuccess.html">
   <p id="second-paragraph"> 
   <input type="radio" id="Chicken tandoori-tikka-chicken-biryani" name="fav_language" value="HTML">
   <label for="html"> Chicken Tikka Biryani</label><br>
@@ -61,11 +61,11 @@
   <input type="radio" id="Nandos" name="fav_language" value="CSS">
   <label for="css">Nandos Style Spicey Rice</label><br>
   <input type="radio" id="creamy-chicken-mushroom-pie" name="fav_language" value="JavaScript">
-  <label for="javascript">Chicken and Mushroom Pie</label><br>
-<p>
+  <label for="javascript">Chicken and Mushroom Pie</label><br> -->
+<!-- <p>
 </p>
 <input type="submit"></p>
-</form> 
+</form>  -->
 <p id="second-paragraph"> </p>
 
 </body>
