--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="flex-item">
 <a href="https://fauziaskitchenfun.com/recipe/rice-meals/tandoori-tikka-chicken-biryani/"> <img src=Biriyani.jpeg style="width: 300px; height: 410px"/></a><p class="greentext"> Chicken Tikka Biryani</p> </div>
 <div class="flex-item">
-<a href="https://thehappyfoodie.co.uk/recipes/bengali-korma/"><img src=chickenkorma.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Bangladeshi Style Chicken Kurma</p></div>
+<a href="https://thehappyfoodie.co.uk/recipes/bengali-korma/"><img src=Chickenkorma.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Bangladeshi Style Chicken Kurma</p></div>
 <div class="flex-item">
 <a href="https://salmasrecipes.com/recipe/handesh"><img src=Handesh.jpg style="width: 300px; height: 410px"/></a><p class="greentext"> Guror Handesh </p></div>
 <div class="flex-item">
